--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
           { id: 'phone', msg: 'Enter a valid 10-digit number.', test: v => /^\d{10}$/.test(v) },
           { id: 'email', msg: 'Enter a valid email.', test: v => /.+@.+\..+/.test(v) },
           { id: 'interest', msg: 'This field is required.' },
-          { selector: 'input[name="entry.######year"]:checked', msg: 'Please select your year.' },
+          { selector: 'input[name="year"]:checked', msg: 'Please select your year.' },
           { id: 'branch', msg: 'Please select your branch.' }
         ];
 
