--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
         <div class="space-y-2">
           <label class="flex items-center">
             <input type="radio" name="year" value="2" class="g-radio mr-3" />
-            <span>2nd Year</span>
+            <span>1nd Year</span>
           </label>
           <label class="flex items-center">
             <input type="radio" name="year" value="3" class="g-radio mr-3" />
-            <span>3rd Year</span>
+            <span>2rd Year</span>
           </label>
         </div>
         <p class="text-xs text-red-400 mt-1 hidden error-msg" id="year-error">Please select your year.</p>
@@ -334,7 +334,7 @@
       const yearError = document.getElementById('year-error');
 
       // REPLACE WITH YOUR ACTUAL WEB APP URL
-      const FORM_ENDPOINT = 'https://script.google.com/macros/s/AKfycbx.../exec';
+      const FORM_ENDPOINT = 'https://script.google.com/macros/s/AKfycbxt_2fRQxpTJo_9m7JOGNBdlI3IC46if2hOkcWxC0QHO3Gl4tEkLhyvA2zpskJi177p5Q/exec';
 
       form.addEventListener('submit', async (e) => {
         e.preventDefault();
