--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     .g-input, .g-select {
       background: rgba(0, 0, 0, 0.08);
       border: 1px solid rgba(255, 255, 255, 0.2);
-      color: white;
+      color: black;
       padding: 0.75rem 1rem;
       border-radius: 0.5rem;
       width: 100%;
