--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     .g-input, .g-select {
       background: rgba(0, 0, 0, 0.08);
       border: 1px solid rgba(255, 255, 255, 0.2);
-      color: black;
+      color: white;
       padding: 0.75rem 1rem;
       border-radius: 0.5rem;
       width: 100%;
@@ -108,7 +108,7 @@
       transition: all 0.2s ease;
     }
     .g-input::placeholder, .g-select::placeholder {
-      color: rgba(255, 255, 255, 0.6);
+      color: rgba(0, 0, 0, 0.6);
     }
     .g-input:focus, .g-select:focus {
       outline: none;
