--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     .g-input, .g-select {
       background: rgba(0, 0, 0, 0.08);
       border: 1px solid rgba(255, 255, 255, 0.2);
-      color: black;
+      color: white;
       padding: 0.75rem 1rem;
       border-radius: 0.5rem;
       width: 100%;
@@ -121,13 +121,26 @@
       box-shadow: 0 0 0 3px rgba(248, 113, 113, 0.2);
     }
     /* Select Arrow */
-    .g-select {
-      appearance: none;
-      background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white'%3e%3cpath d='M7 10l5 5 5-5z'/%3e%3c/svg%3e");
-      background-repeat: no-repeat;
-      background-position: right 1rem center;
-      background-size: 12px;
-    }
+    /* Select Dropdown - FIXED for Windows & All Browsers */
+.g-select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: rgba(255, 255, 255, 0.08);
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23ffffff'%3e%3cpath d='M7 10l5 5 5-5z'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 12px;
+  color: white;
+  padding-right: 2.5rem;
+}
+.g-select option {
+  background-color: #1a1a1a;
+  color: white;
+}
+.g-select:focus {
+  background-color: rgba(255, 255, 255, 0.12);
+}
     /* Submit Button */
     .btn-submit {
       background: linear-gradient(to right, rgb(var(--purple-700)), rgb(var(--purple-600)));
