--- a/index.html
+++ b/index.html
@@ -98,6 +98,28 @@
   background: #000;
   display: block;
 }
+
+        </div>
+
+    <!-- Greeting Message -->
+    <div class="px-6 pb-4 text-sm opacity-90 space-y-3">
+      <p>
+        <strong>Greetings from Team Antariksh,</strong> The Space Technology Student Club of RVCE
+      </p>
+      <p>
+        Filling up this form enrolls you for the <strong>2025 Recruitment Test</strong>, open to all 1st and 2nd Year students of RVCE.
+      </p>
+      <p>
+        Please provide accurate and up-to-date information in the relevant fields. Non-compliant entries containing irrelevant information will not be considered for the Recruitment Test.
+      </p>
+      <p class="pt-2">
+        For more information on Team Antariksh, visit 
+        <a href="https://teamantariksh.co.in" target="_blank" class="text-purple-300 hover:text-purple-100 underline font-medium">
+          our website
+        </a> below the banner.
+      </p>
+    </div>
+    
     /* Form Inputs */
     .g-input, .g-select {
       background: rgba(0, 0, 0, 0.08);
@@ -267,11 +289,11 @@
         <div class="space-y-2">
           <label class="flex items-center">
             <input type="radio" name="year" value="2" class="g-radio mr-3" />
-            <span>1nd Year</span>
+            <span>1st Year</span>
           </label>
           <label class="flex items-center">
             <input type="radio" name="year" value="3" class="g-radio mr-3" />
-            <span>2rd Year</span>
+            <span>2nd Year</span>
           </label>
         </div>
         <p class="text-xs text-red-400 mt-1 hidden error-msg" id="year-error">Please select your year.</p>
