--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
         <div class="space-y-2">
           <label class="flex items-center">
             <input type="radio" name="year" value="2" class="g-radio mr-3" />
-            <span>1st Year</span>
+            <span>1nd Year</span>
           </label>
           <label class="flex items-center">
             <input type="radio" name="year" value="3" class="g-radio mr-3" />
-            <span>2nd Year</span>
+            <span>2rd Year</span>
           </label>
         </div>
         <p class="text-xs text-red-400 mt-1 hidden error-msg" id="year-error">Please select your year.</p>
