--- a/index.html
+++ b/index.html
@@ -277,31 +277,31 @@
         <p class="text-xs text-red-400 mt-1 hidden error-msg" id="year-error">Please select your year.</p>
       </fieldset>
 
-      <!-- Branch Dropdown -->
-      <div>
-        <label for="branch" class="block text-base font-medium mb-2">
-          Branch <span class="text-red-400">*</span>
-        </label>
-        <select id="branch" name="branch" required class="g-select">
-          <option value="" disabled selected>Select your branch</option>
-          <option value="CS">Computer Science (CS)</option>
-          <option value="CY">Computer Science - Cyber Security (CY)</option>
-          <option value="DS">Computer Science - Data Science (DS)</option>
-          <option value="CI">CS - Artificial Intelligence and Machine Learning (CI)</option>
-          <option value="IS">Information Science (IS)</option>
-          <option value="EC">Electronics and Communication (EC)</option>
-          <option value="ET">Electronics and Telecommunications (ET)</option>
-          <option value="EE">Electrical and Electronics (EE)</option>
-          <option value="CE">Civil Engineering (CE)</option>
-          <option value="ME">Mechanical Engineering (ME)</option>
-          <option value="AS">Aerospace Engineering (AS)</option>
-          <option value="BT">Biotechnology (BT)</option>
-          <option value="IEM">Industrial Engineering and Management (IEM)</option>
-          <option value="CH">Chemical Engineering (CH)</option>
-        </select>
-        <p class="text-xs text-red-400 mt-1 hidden error-msg">Please select your branch.</p>
-      </div>
+      <!-- Branch Dropdown (Alphabetical) -->
+<div>
+  <label for="branch" class="block text-base font-medium mb-2">
+    Branch <span class="text-red-400">*</span>
+  </label>
+  <select id="branch" name="branch" required class="g-select">
+    <option value="" disabled selected>Select your branch</option>
 
+    <option value="AS">Aerospace Engineering (AS)</option>
+    <option value="BT">Biotechnology (BT)</option>
+    <option value="CE">Civil Engineering (CE)</option>
+    <option value="CH">Chemical Engineering (CH)</option>
+    <option value="CI">CS - Artificial Intelligence and Machine Learning (CI)</option>
+    <option value="CS">Computer Science (CS)</option>
+    <option value="CY">Computer Science - Cyber Security (CY)</option>
+    <option value="DS">Computer Science - Data Science (DS)</option>
+    <option value="EC">Electronics and Communication (EC)</option>
+    <option value="EE">Electrical and Electronics (EE)</option>
+    <option value="ET">Electronics and Telecommunications (ET)</option>
+    <option value="IEM">Industrial Engineering and Management (IEM)</option>
+    <option value="IS">Information Science (IS)</option>
+    <option value="ME">Mechanical Engineering (ME)</option>
+  </select>
+  <p class="text-xs text-red-400 mt-1 hidden error-msg">Please select your branch.</p>
+</div>
       <!-- Interest -->
       <div>
         <label for="interest" class="block text-base font-medium mb-2">
