--- a/index.html
+++ b/index.html
@@ -348,8 +348,7 @@
       const usnInput = document.getElementById('usn');
 
       // REPLACE WITH YOUR ACTUAL WEB APP URL
-      const FORM_ENDPOINT = 'https://script.google.com/macros/s/AKfycbxt_2fRQxpTJo_9m7JOGNBdlI3IC46if2hOkcWxC0QHO3Gl4tEkLhyvA2zpskJi177p5Q/exec';
-
+      const FORM_ENDPOINT = 'https://script.google.com/macros/s/AKfycbxgjkVtsKh0QUQUUneZ1gilG1AaQ5rU34SYcHBfm0xvYCu3gKg89_feadDdg5GmNO1Vog/exec'
       // === PREVENT MULTIPLE SUBMISSIONS ===
       const checkSubmission = () => {
         const usn = usnInput.value.trim().toUpperCase();
